--- a/week-6/stylesheet.css
+++ b/week-6/stylesheet.css
@@ -241,3 +241,10 @@ body {
 .site-footer a {
   text-decoration: none;
 }
+
+body {
+  margin: 0;
+  color: var(--text);
+  background: url("imagesfield-guide-background/.png") center center / cover no-repeat fixed;
+  font-family: 'IBM Plex Mono', monospace;
+}
