--- a/week-6/stylesheet.css
+++ b/week-6/stylesheet.css
@@ -248,3 +248,12 @@ body {
   background: url("imagesfield-guide-background/.png") center center / cover no-repeat fixed;
   font-family: 'IBM Plex Mono', monospace;
 }
+
+h4 a.button {
+  color: black;
+  text-decoration: none;
+}
+
+h4 a.button:hover {
+  text-decoration: underline;
+}
