--- a/week-6/stylesheet.css
+++ b/week-6/stylesheet.css
@@ -249,11 +249,9 @@ body {
   font-family: 'IBM Plex Mono', monospace;
 }
 
-h4 a.button {
+a.button,
+a.button:visited,
+a.button:active {
   color: black;
   text-decoration: none;
-}
-
-h4 a.button:hover {
-  text-decoration: underline;
 }
