--- a/week-6/case-study/csstylesheet.css
+++ b/week-6/case-study/csstylesheet.css
@@ -175,3 +175,10 @@ footer p {
     align-items: center;
   }
 }
+
+body {
+  margin: 0;
+  color: var(--text);
+  background: url("images/field-guide-background.png") center center / cover no-repeat fixed;
+  font-family: 'IBM Plex Mono', monospace;
+}
