--- a/week-6/case-study/csstylesheet.css
+++ b/week-6/case-study/csstylesheet.css
@@ -176,13 +176,6 @@ footer p {
   }
 }
 
-body {
-  margin: 0;
-  color: var(--text);
-  background: url("images/field-guide-background.png") center center / cover no-repeat fixed;
-  font-family: 'IBM Plex Mono', monospace;
-}
-
 .back-button {
   display: inline-block;
   padding: 10px 24px;
@@ -201,4 +194,11 @@ body {
   background: #000;
   color: #fff;
   transform: translateY(-2px);
+}
+
+body {
+  margin: 0;
+  font-family: "IBM Plex Mono", monospace;
+  background: url("../images/field-guide-background.png") center center / cover no-repeat fixed;
+  color: var(--black);
 }
